fixed the alignment bug

--- a/src/main/resources/static/register.css
+++ b/src/main/resources/static/register.css
@@ -71,6 +71,21 @@ input[type="password"]:focus {
     background: rgba(255, 255, 255, 1);
 }
 
+.input-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.input-section label {
+    font-weight: 500;
+    color: #50698D;
+    align-self: flex-start;
+    margin-left: 5%;
+    width: 90%;
+}
+
 .logo {
     position: absolute;
     top: 20px;
